Fix activity list time spacing

--- a/style.less
+++ b/style.less
@@ -206,12 +206,22 @@ fieldset {
             padding: 0.5rem 0.5rem;
             border-bottom: 1px solid #d4d4d4;
             background-color: white;
+
+            &.activity-list-time-separator {
+                padding-left: 0;
+                padding-right: 0;
+            }
         }
     }
 }
 
 .activity-list-time-column {
     color: #888;
+    white-space: nowrap;
+}
+
+.activity-list-time-end {
+    text-align: right;
 }
 
 .activity-list-title-column {
